fix: why-choose-area spacing

--- a/css/style.css
+++ b/css/style.css
@@ -11656,7 +11656,6 @@ ul.children {
 }
 
 .single-card-wrapper .elementor-container {
-  margin-top: 60px;
   display: grid !important;
   grid-template-columns: auto auto auto auto;
 }
