--- a/sass/modules/_why-choose-us-area.scss
+++ b/sass/modules/_why-choose-us-area.scss
@@ -185,7 +185,7 @@
 
 .single-card-wrapper {
     .elementor-container{
-        margin-top: 60px;
+        // margin-top: 60px;
         display: grid !important;
         grid-template-columns: auto auto auto auto;
         @include sm {
